Version 1.4 - 2015-05-29
* Add information to differentiate second level commission to prevent picking such agent on a contract

Version 1.3 - 2015-01-22
* Module creation