@@ -5,5 +5,7 @@ depends:
     cog_utils
     commission
     commission_insurance
+extra_depends:
+    commission_insurance_prepayment
 xml:
     commission.xml
