@@ -1,3 +1,5 @@
+* Support multi agent commission for prepayment
+
 Version 1.4 - 2015-05-29
 * Add information to differentiate second level commission to prevent picking such agent on a contract
 
